--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
         "array": "c",
         "string": "c",
         "string_view": "c",
-        "fuse.h": "c"
+        "fuse.h": "c",
+        "bitset": "c",
+        "initializer_list": "c",
+        "utility": "c"
     }
 }
