Support rename file or directory by mv command.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "fuse.h": "c",
         "bitset": "c",
         "initializer_list": "c",
-        "utility": "c"
+        "utility": "c",
+        "memory_resource": "c"
     }
 }
